<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/username_editText"
        android:layout_width="318dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/password_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="318dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_editText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/login_to_facebook"
        android:textColor="#0066FF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/username_editText"
        app:layout_constraintEnd_toEndOf="@+id/username_editText"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="@+id/username_editText" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="102dp"
        android:layout_height="121dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/icfacebook" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="318dp"
        android:layout_height="63dp"
        android:layout_marginTop="108dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/password_editText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_editText"
        app:layout_constraintTop_toBottomOf="@+id/password_editText" />

</androidx.constraintlayout.widget.ConstraintLayout>